objects/AccountOwnerChangeTracking__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Owner Change Trackings</relationshipLabel>
        <relationshipName>Account_Owner_Change_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Owner Change Trackings</relationshipLabel>
        <relationshipName>Account_Owner_Change_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorInfo__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Owner_Change_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UIMSCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Registration History Tracking</label>
        <referenceTo>UIMSCompany__c</referenceTo>
        <relationshipLabel>Account Owner Change Trackings</relationshipLabel>
        <relationshipName>Account_Owner_Change_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Owner Change Tracking</label>
    <nameField>
        <displayFormat>AOC-{0000}</displayFormat>
        <label>Account Owner Change Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Owner Change Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>